--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -538,7 +538,7 @@ For instance, reference, shared_ptr will be deduced as <a href="../user_guide/in
 <thead>
 <tr>
 <th>Type</th>
-<th>deduce</th>
+<th>Scope</th>
 </tr>
 </thead>
 <tbody>
@@ -552,7 +552,7 @@ For instance, reference, shared_ptr will be deduced as <a href="../user_guide/in
 </tr>
 <tr>
 <td>const T&amp;</td>
-<td><a href="../user_guide/index.html#di_unique">unique</a> (temporary)/singleton</td>
+<td><a href="../user_guide/index.html#di_unique">unique</a> (temporary) / <a href="../user_guide/index.html#di_singleton">singleton</a></td>
 </tr>
 <tr>
 <td>T*</td>
@@ -567,15 +567,19 @@ For instance, reference, shared_ptr will be deduced as <a href="../user_guide/in
 <td><a href="../user_guide/index.html#di_unique">unique</a></td>
 </tr>
 <tr>
-<td>unique_ptr<T></td>
+<td>std::unique_ptr<T></td>
 <td><a href="../user_guide/index.html#di_unique">unique</a></td>
 </tr>
 <tr>
-<td>shared_ptr<T></td>
+<td>std::shared_ptr<T></td>
 <td><a href="../user_guide/index.html#di_singleton">singleton</a></td>
 </tr>
 <tr>
-<td>weak_ptr<T></td>
+<td>boost::shared_ptr<T></td>
+<td><a href="../user_guide/index.html#di_singleton">singleton</a></td>
+</tr>
+<tr>
+<td>std::weak_ptr<T></td>
 <td><a href="../user_guide/index.html#di_singleton">singleton</a></td>
 </tr>
 </tbody>
@@ -607,11 +611,9 @@ It would be better to use <code>std::unique_ptr&lt;iview&gt;</code> instead.</p>
 <thead>
 <tr>
 <th>Type/Scope</th>
-<th>unique</th>
-<th>singleton</th>
-<th>instance</th>
-<th></th>
-<th></th>
+<th><a href="../user_guide/index.html#di_unique">unique</a></th>
+<th><a href="../user_guide/index.html#di_singleton">singleton</a></th>
+<th><a href="../user_guide/index.html#di_instance">instance</a></th>
 </tr>
 </thead>
 <tbody>
@@ -620,72 +622,60 @@ It would be better to use <code>std::unique_ptr&lt;iview&gt;</code> instead.</p>
 <td>✔</td>
 <td>-</td>
 <td>✔</td>
-<td></td>
-<td></td>
 </tr>
 <tr>
 <td>T&amp;</td>
 <td>-</td>
 <td>✔</td>
 <td>✔</td>
-<td></td>
-<td></td>
 </tr>
 <tr>
 <td>const T&amp;</td>
 <td>✔ (temporary)</td>
 <td>✔</td>
 <td>✔</td>
-<td></td>
-<td></td>
 </tr>
 <tr>
 <td>T* (transfer ownership)</td>
 <td>✔</td>
 <td>-</td>
 <td>-</td>
-<td>-</td>
-<td>✔</td>
 </tr>
 <tr>
 <td>const T*</td>
 <td>✔</td>
 <td>-</td>
-<td>✔</td>
-<td></td>
-<td></td>
+<td>-</td>
 </tr>
 <tr>
 <td>T&amp;&amp;</td>
 <td>✔</td>
 <td>-</td>
-<td>-</td>
-<td></td>
-<td></td>
+<td>✔</td>
 </tr>
 <tr>
-<td>unique_ptr<T></td>
+<td>std::unique_ptr<T></td>
 <td>✔</td>
 <td>-</td>
-<td>✔</td>
-<td></td>
-<td></td>
+<td>-</td>
 </tr>
 <tr>
-<td>shared_ptr<T></td>
+<td>std::shared_ptr<T></td>
 <td>✔</td>
 <td>✔</td>
 <td>✔</td>
-<td></td>
-<td></td>
 </tr>
 <tr>
-<td>weak_ptr<T></td>
+<td>boost::shared_ptr<T></td>
+<td>✔</td>
+<td>✔</td>
+<td>- / ✔ converted to</td>
+</tr>
+<tr>
+<td>std::weak_ptr<T></td>
 <td>-</td>
 <td>✔</td>
-<td>✔</td>
-<td></td>
-<td></td>
+<td>- / ✔ converted to</td>
 </tr>
 </tbody>
 </table>
