--- a/user_guide/index.html
+++ b/user_guide/index.html
@@ -273,6 +273,7 @@ struct impl : i1, i2 { void dummy1() override { } void dummy2() override { } };
 
 <h3 id="injector">Injector</h3>
 <p><a id="di_make_injector"></a></p>
+<p>Injector is a core component providing types creation functionality using <a href="#bindings">bindings</a>.</p>
 <p>--- <strong><em>di::make_injector</em></strong> ---</p>
 <p><strong><em>Header</em></strong></p>
 <pre><code>#include &lt;boost/di.hpp&gt;
