--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ but also can help you with...</p>
 <h3 id="why-boostdi">Why Boost.DI?</h3>
 <ul>
 <li>Boost.DI has none or minimal run-time overhead (See <a href="overview/index.html#performance">Performance</a>)</li>
-<li>Boost.DI compiles fast (See <a href="overview/index.html#benchmarks">Benchmarks</a>)</li>
+<li>Boost.DI compiles fast / <strong>Faster than Java-<a href="https://github.com/google/dagger">Dagger2</a>!</strong> (See <a href="overview/index.html#benchmarks">Benchmarks</a>)</li>
 <li>Boost.DI gives short diagnostic messages (See <a href="overview/index.html#error-messages">Error messages</a>)</li>
 <li>Boost.DI is non-intrusive (See <a href="user_guide/index.html#injections">Injections</a>)</li>
 <li>Boost.DI reduces boilerplate code (See <a href="tutorial/index.html#1-basic-create-objects-tree">Create Objects Tree</a>)</li>
@@ -396,5 +396,5 @@ but also can help you with...</p>
 
 <!--
 MkDocs version : 0.15.0
-Build Date UTC : 2016-02-22 23:34:41.815911
+Build Date UTC : 2016-02-23 10:02:29.283069
 -->
