--- a/overview/index.html
+++ b/overview/index.html
@@ -204,9 +204,9 @@
               
                 <h3 id="quick-start">Quick Start</h3>
 <ul>
-<li>Get <a href="https://raw.githubusercontent.com/boost-experimental/di/master/include/boost/di.hpp">boost/di.hpp</a> header</li>
+<li>Get <a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/include/boost/di.hpp">boost/di.hpp</a> header</li>
 </ul>
-<pre><code class="sh">wget https://raw.githubusercontent.com/boost-experimental/di/master/include/boost/di.hpp
+<pre><code class="sh">wget https://raw.githubusercontent.com/boost-experimental/di/cpp14/include/boost/di.hpp
 </code></pre>
 
 <ul>
@@ -225,7 +225,7 @@ namespace di = boost::di;
 <ul>
 <li>To run tests</li>
 </ul>
-<pre><code class="sh">git clone https://github.com/boost-experimental/di &amp;&amp; cd di &amp;&amp; make test
+<pre><code class="sh">git clone https://github.com/boost-experimental/di &amp;&amp; cd di &amp;&amp; make
 </code></pre>
 
 <h3 id="dependencies">Dependencies</h3>
